Fix CORS security and add music